# wikipedia_automation_test

./: .env.config  .gitignore  README.md  pyproject.toml  pytest.ini
pages/: api_pages.py  article_page.py  registration_page.py  user_main_page.py  watch_list_page.py
tests/: conftest.py  test_functionalities.py  test_functionalities_api.py  test_functionalities_ui.py
utils/: api_request_utils.py  api_utils.py  attach.py  path.py  set_cookies.py
