[tool.poetry]
name = "wikipedia-automation-test"
version = "0.1.0"
description = ""
authors = ["Silver <testingbugsrus@gmail.com>"]
readme = "README.md"
packages = [{include = "wikipedia_automation_test"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "7.4.0"
selenium = "4.5.0"
selene = "2.0.0b17"
python-dotenv = "1.0.0"
pydantic = "1.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
